Navber And Articles Added

--- a/index.html
+++ b/index.html
@@ -11,24 +11,109 @@
 </head>
 <body>
 <!-- Header Section Start -->
+    <header class="header">
     <!-- Navber Start -->
+        <div class="container">
+            <div class="navber">
 
+                <div class="logo">
+                    <div class="logo-img">
+                        <img src="images/icons/logo.png" alt="Logo">
+                    </div>
+                    <div class="logo-text">
+                        <h3>Idea</h3>
+                    </div>
+                </div>
+
+                <div class="navigation">
+                    <div class="menu">
+                        <ul class="menu-ber">
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Works</li>
+                        </ul>
+                    </div>
+                    <div class="profile">
+                        <img src="images/icons/profile.png" alt="Profile-Picture">
+                    </div>
+
+                </div>
+            </div>
+        </div>
     <!-- Navber End -->
+    </header>
 <!-- Header Section End -->
 
 
 <!-- Main Body Section Start -->
-    <!-- Top Player Section Start -->
+    <main>
+    <section class="container">
+        <div class="articles">
+        <!-- Top Player Section Start -->
+            <div class="section-title"><h2>Top Player</h2></div>
+            <div class="players">
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-name">
+                        <h4>John Smith</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-name">
+                        <h4>Pro Rasel</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-name">
+                        <h4>Abu sufian</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-name">
+                        <h4>Shajedul Karim</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-name">
+                        <h4>Maruf Ahamed</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-6.png" alt="">
+                    </div>
+                    <div class="player-name">
+                        <h4>Mujahid</h4>
+                    </div>
+                </div>
+            </div>
+        <!-- Top Player Section End -->
+        <hr>
+        <!-- Top Blog Section Start -->
 
-    <!-- Top Player Section End -->
-
-    <!-- Top Blog Section Start -->
-
-    <!-- Top Blog Section End -->
+        <!-- Top Blog Section End -->
+    </div>
+    </section>
+  
 
     <!-- Latest Courses Section Start -->
 
     <!-- Latest Courses Section End -->
+    </main>
 <!-- Main Body Section End -->
     
 </body>
